--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "flowbite-react": "^0.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.21.1"
   },
   "devDependencies": {
